[package]
name = "data-plane-api"
version = "0.1.1"
edition = "2021"
description = "Envoy xDS protobuf and gRPC definitions"
repository = "https://github.com/jpittis/rust-control-plane"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"
prost-wkt = {version = "0.5", optional = true}
prost-wkt-types = {version = "0.5", optional = true}
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
tonic-build = "0.10"
glob = "0.3"
prost-build = "0.12"
prost-wkt-build = "0.5"

[features]
serde = ["dep:prost-wkt", "dep:prost-wkt-types", "dep:serde"]